Fix spacing for figures

--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -1139,8 +1139,17 @@ p {
   margin: 0 0 $paragraphSpacing 0;
 }
 
-figure img {
-  box-shadow: 0 11px 56px 0 rgba(0, 0, 0, 0.4);
+figure {
+
+  text-align: center;
+
+  > a {
+    margin: 0
+  }
+
+  img {
+    box-shadow: 0 11px 56px 0 rgba(0, 0, 0, 0.4);
+  }
 }
 
 figcaption h4 {
